# prettyspatial

./: .gitignore  README.md  pyproject.toml
examples/: spatial_plotly.ipynb
src/prettyspatial/: __init__.py  plotly_spatial.py
