[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prettyspatial"
version = "0.1.0"
description = "Prettier visualization for spatial data from AnnData objects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jawad Alaa Edeen" }
]
dependencies = [
    "pandas>=1.5",
    "plotly>=5.0",
    "anndata>=0.9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]