[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prettyspatial"
version = "0.1.0"
description = "Interactive spatial plotting tools for AnnData"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "plotly",
    "anndata",
    "nbformat",
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
